--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    tools:ignore="ExtraText">
 
     <include
         android:id="@+id/app_bar_main"
@@ -21,5 +22,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        android:background="#00274C"
+        app:menu="@menu/activity_main_drawer"
+        app:itemIconTint="#000000"
+        app:itemTextColor="#FFFFFF"/>
 </androidx.drawerlayout.widget.DrawerLayout>
