--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -24,7 +24,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FFCB05"
+                android:background="@color/maize"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
@@ -35,13 +35,13 @@
                     android:layout_height="wrap_content"
                     android:text="Alert Title"
                     android:textStyle="bold"
-                    android:textColor="#000000" />
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="This is an example alert to showcase the alert/announcement function."
-                    android:textColor="#000000" />
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <View
@@ -52,7 +52,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00274C"
+                android:background="@color/blue"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
@@ -62,7 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="SIGN IN WITH UM-GOOGLE"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:paddingBottom="8dp" />
 
@@ -70,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="UM-Flint App is better with an account, customize and personalize it so it works for you!"
-                    android:textColor="#FFFFFF" />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <View
@@ -81,7 +81,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00274C"
+                android:background="@color/blue"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="EVENTS"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -104,14 +104,14 @@
                         android:layout_width="0dp"
                         android:layout_height="80dp"
                         android:layout_weight="1"
-                        android:background="#FFCB05"
+                        android:background="@color/maize"
                         android:padding="8dp" />
 
                     <View
                         android:layout_width="0dp"
                         android:layout_height="80dp"
                         android:layout_weight="1"
-                        android:background="#FFCB05"
+                        android:background="@color/maize"
                         android:padding="8dp"
                         android:layout_marginStart="8dp" />
 
@@ -119,7 +119,7 @@
                         android:layout_width="0dp"
                         android:layout_height="80dp"
                         android:layout_weight="1"
-                        android:background="#FFCB05"
+                        android:background="@color/maize"
                         android:padding="8dp"
                         android:layout_marginStart="8dp" />
                 </LinearLayout>
@@ -133,7 +133,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00274C"
+                android:background="@color/blue"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
@@ -143,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NEWS"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textStyle="bold" />
 
                 <TextView
@@ -151,14 +151,14 @@
                     android:layout_height="wrap_content"
                     android:text="Example News 1"
                     android:paddingTop="8dp"
-                    android:textColor="#FFFFFF" />
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Example News 2"
                     android:paddingTop="8dp"
-                    android:textColor="#FFFFFF" />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <View
@@ -169,7 +169,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00274C"
+                android:background="@color/blue"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:elevation="4dp">
@@ -178,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="MAPS"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textStyle="bold" />
 
             </LinearLayout>
