--- a/app/src/main/res/layout/activity_maps_page.xml
+++ b/app/src/main/res/layout/activity_maps_page.xml
@@ -6,12 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    tools:ignore="ExtraText">
+    tools:openDrawer="start">
 
     <include
-        android:id="@+id/app_bar_main"
-        layout="@layout/app_bar_main"
+        android:id="@+id/app_bar_maps_page"
+        layout="@layout/app_bar_maps_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -21,9 +20,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        android:background="#00274C"
-        app:menu="@menu/activity_main_drawer"
-        app:itemIconTint="#000000"
-        app:itemTextColor="#FFFFFF"/>
+        app:headerLayout="@layout/nav_header_maps_page"
+        app:menu="@menu/activity_main_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
