--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,8 @@
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
-                android:elevation="4dp">
+                android:elevation="4dp"
+                android:onClick="openAlertsPage">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -56,7 +57,8 @@
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
-                android:elevation="4dp">
+                android:elevation="4dp"
+                android:onClick="openSignInPage">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -85,7 +87,8 @@
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
-                android:elevation="4dp">
+                android:elevation="4dp"
+                android:onClick="openEventsPage">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,7 +108,8 @@
                         android:layout_height="80dp"
                         android:layout_weight="1"
                         android:background="@color/maize"
-                        android:padding="8dp" />
+                        android:padding="8dp"
+                        android:onClick="openEvent1"/>
 
                     <View
                         android:layout_width="0dp"
@@ -113,7 +117,8 @@
                         android:layout_weight="1"
                         android:background="@color/maize"
                         android:padding="8dp"
-                        android:layout_marginStart="8dp" />
+                        android:layout_marginStart="8dp"
+                        android:onClick="openEvent2"/>
 
                     <View
                         android:layout_width="0dp"
@@ -121,7 +126,8 @@
                         android:layout_weight="1"
                         android:background="@color/maize"
                         android:padding="8dp"
-                        android:layout_marginStart="8dp" />
+                        android:layout_marginStart="8dp"
+                        android:onClick="openEvent3"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -137,7 +143,8 @@
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
-                android:elevation="4dp">
+                android:elevation="4dp"
+                android:onClick="openNewsPage">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -151,14 +158,24 @@
                     android:layout_height="wrap_content"
                     android:text="Example News 1"
                     android:paddingTop="8dp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:onClick="openNews1"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Example News 2"
                     android:paddingTop="8dp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:onClick="openNews2"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Example News 3"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:onClick="openNews3"/>
             </LinearLayout>
 
             <View
@@ -172,7 +189,8 @@
                 android:background="@color/blue"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:elevation="4dp">
+                android:elevation="4dp"
+                android:onClick="openMapsPage">
 
                 <TextView
                     android:layout_width="wrap_content"
