added api calls and tested on news section

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -137,6 +137,7 @@
 
             <!-- News Section -->
             <LinearLayout
+                android:id="@+id/NewsSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue"
@@ -152,7 +153,7 @@
                     android:text="NEWS"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
-
+                <!--
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -176,6 +177,7 @@
                     android:paddingTop="8dp"
                     android:textColor="@color/white"
                     android:onClick="openNews3"/>
+                    !-->
             </LinearLayout>
 
             <View
