--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view"
-    android:background="#FFFFFF">
+    android:background="#00274C"
+    app:itemTextColor="#FFFFFF">
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:title="@string/home" />
+        <item
             android:id="@+id/nav_resources"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/department_information" >
+            android:title="@string/department_information"
+            android:titleTextAppearance="@style/NavMenuGroupText">
             <!--Submenu items-->
             <menu>
                 <item
@@ -25,7 +31,8 @@
         <item
             android:id="@+id/nav_scheduling"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/scheduling">
+            android:title="@string/scheduling"
+            android:titleTextAppearance="@style/NavMenuGroupText">
             <menu>
                 <item
                     android:id="@+id/nav_scheduling_reserve_room"
@@ -41,10 +48,11 @@
         <item
             android:id="@+id/nav_messaging"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/messaging" >
+            android:title="@string/messaging"
+            android:titleTextAppearance="@style/NavMenuGroupText">
             <menu>
                 <item
-                    android:id="@+id/nav_messaging_announcements"
+                    android:id="@+id/nav_announcements"
                     android:title="@string/announcements" />
                 <item
                     android:id="@+id/nav_messaging_discord"
