begin integrating events into the main page from backend

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -81,6 +81,7 @@
 
             <!-- Events Section -->
             <LinearLayout
+                android:id="@+id/EventsSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue"
