--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,21 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:background="?attr/colorPrimary"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp">
+    android:paddingTop="24dp"
+    android:paddingBottom="16dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="1dp">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/nav_header_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/Theme.UMFlintApplication.AppBarOverlay"
-        android:elevation="4dp"
-        app:navigationIcon="@drawable/ic_menu"
-    app:title="Main Menu"
-    app:titleTextColor="@android:color/white" />
+    <!-- First Logo -->
+    <ImageView
+        android:id="@+id/logo_left"
+        android:layout_width="48dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="@string/app_logo_description"
+        android:src="@drawable/app_logo" />
+
+    <!-- University Name -->
+    <ImageView
+        android:id="@+id/logo_right"
+        android:layout_width="191dp"
+        android:layout_height="36dp"
+        android:contentDescription="@string/umflint_logo_description"
+        android:src="@drawable/umflint" />
 
 </LinearLayout>
