--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -94,7 +94,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="NEWS"
+                    android:text="EVENTS"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
