Add in authentication
Basically to sign in you have to create an instance of the Auth class, making sure to pass the activity to it (via 'this').

You can then call the login function, which has a callback that will give you the JWT token.

If the user has already logged in, then the JWT token will be passed automatically.

Else it will try to login the user automatically via Google (given they have a umich.edu account signed in.)

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -51,6 +51,7 @@
 
             <!-- Sign-In Section -->
             <LinearLayout
+                android:id="@+id/SignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue"
