--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -90,7 +90,7 @@
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
                 android:elevation="4dp"
-                android:onClick="openNewsPage">
+                android:onClick="openEventsPage">
 
                 <TextView
                     android:layout_width="wrap_content"
