--- a/app/src/main/res/layout/activity_department_information.xml
+++ b/app/src/main/res/layout/activity_department_information.xml
@@ -26,11 +26,11 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <include
-        android:id="@+id/app_bar_department_information"
-        layout="@layout/app_bar_department_information"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <include-->
+<!--        android:id="@+id/app_bar_department_information"-->
+<!--        layout="@layout/app_bar_department_information"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
     <!-- Navigation Drawer -->
     <com.google.android.material.navigation.NavigationView
