Added the content view to DepartmentInformationActivity and AcademicCalendar. Also started making maps page set up

--- a/app/src/main/res/layout/activity_academic_calendar.xml
+++ b/app/src/main/res/layout/activity_academic_calendar.xml
@@ -23,6 +23,14 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+        <!-- Include the content.xml -->
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!-- Content layout from content.xml -->
+            <include layout="@layout/content_academic_calendar" />
+        </FrameLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 <!--    <include-->
