--- a/app/src/main/res/layout/activity_department_information.xml
+++ b/app/src/main/res/layout/activity_department_information.xml
@@ -22,7 +22,14 @@
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+        <!-- Include the content.xml -->
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!-- Content layout from content.xml -->
+            <include layout="@layout/content_department_information" />
+        </FrameLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
