Added send announcements page

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -49,6 +49,9 @@
                     android:id="@+id/nav_announcements"
                     android:title="@string/announcements" />
                 <item
+                        android:id="@+id/nav_send_announcements"
+                        android:title="@string/send_announcements" />
+                <item
                     android:id="@+id/nav_messaging_discord"
                     android:title="@string/discord" />
                 <item
